2007-06-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* kiwi/tasklet.py: Misc. pylint fixes and code cleanup.

	* kiwi/tasklet.py (Tasklet.add_join_callback): Allow passing extra
	user arguments to the callback.
	(Tasklet.start): New start() method to bootstrap the tasklet.
	(Tasklet.__init__): Add parameter to allow constructing tasklets
	without starting them.

	* tests/test_tasklet.py (TestWaitForSignal.testEmissionHook): Tesk
	emission hooks.

	* kiwi/tasklet.py (WaitForSignal): Add support for signal emission
	hooks by allowing the programmer to pass a GObject class instead
	of instance.

2007-06-06  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/label.py: Allow string replacements in ProxyLabels

2007-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_proxy.py:

	Make the proxy call widget.update(ValueUnset) for all
	proxy widgets when resetting the model (eg,  proxy.set_model(None)).

2007-05-31  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py:
	* tests/test_Entry.py:
	Fix for #3408, Entry reads valueunset always, when empty

2007-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.get_date): Catch ValidationError
	and ignore it.

2007-05-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/db/sqlobj.py: Add support for full text indexes under postgres.

	* kiwi/ui/gaxmlloader.py:
	* kiwi/ui/views.py:
	Add support for loading GAXML files

2007-05-28  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/ui/proxywidget.py: Allow proxy widgets to pass paramenters to the
	datatype converter.
	* kiwi/ui/widgets/entry.py: Never show the currency symbol on currency