@@ -37,18 +37,19 @@ class TestWaitForSignal(unittest.TestCase):
         self.assertEqual(task.state, tasklet.Tasklet.STATE_ZOMBIE)
         self.assertEqual(task.return_value, "return-val")
 
-    def testEmissionHook(self):
-        obj = C()
+    if hasattr(gobject, 'add_emission_hook'):
+        def testEmissionHook(self):
+            obj = C()
 
-        def some_task():
-            yield tasklet.WaitForSignal(C, 'my-signal')
-            tasklet.get_event()
-            raise StopIteration("return-val")
+            def some_task():
+                yield tasklet.WaitForSignal(C, 'my-signal')
+                tasklet.get_event()
+                raise StopIteration("return-val")
 
-        task = tasklet.run(some_task())
-        obj.emit("my-signal", 1)
-        self.assertEqual(task.state, tasklet.Tasklet.STATE_ZOMBIE)
-        self.assertEqual(task.return_value, "return-val")
+            task = tasklet.run(some_task())
+            obj.emit("my-signal", 1)
+            self.assertEqual(task.state, tasklet.Tasklet.STATE_ZOMBIE)
+            self.assertEqual(task.return_value, "return-val")
 
 
 class TestWaitForTimeout(unittest.TestCase):
